Refactor/observation buffer (#4890)
* Add benchmark for observation buffer

Signed-off-by: Fabian König <fabiankoenig@gmail.com>

* Apply rule of zero for Observation and do not use ptr for cloud

Signed-off-by: Fabian König <fabiankoenig@gmail.com>

* ObservationBuffer stores shared ptrs of observations to avoid copies when queried

Signed-off-by: Fabian König <fabiankoenig@gmail.com>

* Check for nullptr if *_buffers_ members are accessed

Signed-off-by: Fabian König <fabiankoenig@gmail.com>

---------

Signed-off-by: Fabian König <fabiankoenig@gmail.com>
Signed-off-by: Decwest <fumiyaonishi1016@gmail.com>

--- a/nav2_costmap_2d/test/unit/CMakeLists.txt
+++ b/nav2_costmap_2d/test/unit/CMakeLists.txt
@@ -65,5 +65,9 @@ target_link_libraries(lifecycle_test
 
 ament_add_gtest(coordinate_transform_test coordinate_transform_test.cpp)
 target_link_libraries(coordinate_transform_test
+  nav2_costmap_2d_core)
+
+ament_add_gtest(observation_buffer_test observation_buffer_test.cpp)
+target_link_libraries(observation_buffer_test
   nav2_costmap_2d_core
 )
