--- a/nav2_costmap_2d/package.xml
+++ b/nav2_costmap_2d/package.xml
@@ -49,6 +49,7 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>nav2_map_server</test_depend>
   <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_cmake_google_benchmark</test_depend>
   <test_depend>launch</test_depend>
   <test_depend>launch_testing</test_depend>
   <test_depend>nav2_lifecycle_manager</test_depend>
