Planner Server: Add support for planning partial paths when planning through poses (#5687)
* Added a new state variable to track whether partial planning is allowed

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Added partial planning parameter

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Updated unit test with partial planning parameter

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Added support for planning partial paths when planning through poses

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Added a new unit test for planning through poses

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Added partial planning parameter

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Updated assertions in test cases to prevent segfaults

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Updated copyright

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Disable partial planning by default

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Trimmed empty lines

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Added a new line at the end of file

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Added a new result field for last reached pose index to the action

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Updated BT node with last reached pose index field

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Reduced line length for formatting

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Fixed last reachable index calculation

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Added placeholder value for last_reached_index field in remaining callbacks

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Set default value for last_reached_index field

Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Added description for ALL_GOALS enum

Co-authored-by: Steve Macenski <stevenmacenski@gmail.com>
Signed-off-by: Abhishekh Reddy <helloarm@pm.me>

* Added  output port in ComputePathThroughPoses

Signed-off-by: Abhishekh Reddy <helloarm@pm.

--- a/nav2_planner/test/CMakeLists.txt
+++ b/nav2_planner/test/CMakeLists.txt
@@ -8,3 +8,17 @@ target_link_libraries(test_dynamic_parameters
   rclcpp::rclcpp
   ${rcl_interfaces_TARGETS}
 )
+
+ament_add_gtest(test_plan_through_poses
+  test_plan_through_poses.cpp
+)
+target_link_libraries(test_plan_through_poses
+  ${library_name}
+  nav2_util::nav2_util_core
+  rclcpp::rclcpp
+  nav2_costmap_2d::nav2_costmap_2d_core
+  ${rcl_interfaces_TARGETS}
+  ${geometry_msgs_TARGETS}
+  ${nav_msgs_TARGETS}
+  ${nav2_msgs_TARGETS}
+)
