Add Eigen in nav2_map_server (#5695)
Signed-off-by: mini-1235 <mauricepurnawan@gmail.com>
Signed-off-by: Decwest <fumiyaonishi1016@gmail.com>

--- a/nav2_map_server/package.xml
+++ b/nav2_map_server/package.xml
@@ -31,6 +31,7 @@
   <depend>lifecycle_msgs</depend>
   <depend>nav2_ros_common</depend>
   <depend>uuid</depend>
+  <depend>eigen</depend>
 
   <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
