[Draft] CollisionMonitor: add CostmapSource + dataset-based bag test (#5642)
* Collision Monitor: add costmap sourced(unit tests)

Signed-off-by: Mengting Yang <mengtiy5@uci.edu>

* nav2_collision_monitor: modified CostmapSource + dataset-based bag test (v1)

Signed-off-by: Mengting Yang <mengtiy5@uci.edu>

* modified:   nav2_collision_monitor/README.md

Signed-off-by: Mengting Yang <mengtiy5@uci.edu>

* - annotate files to indicate AI-assisted drafts
Signed-off-by: Mengting Yang <mengtiy5@uci.edu>

* collision_monitor: fix linter and address issues in the comment

Signed-off-by: lotusymt <mengtiy5@uci.edu>

* nav2_collision_monitor: fix lint, coverage, and collision_monitor_node_test.cpp

Signed-off-by: lotusymt <mengtiy5@uci.edu>

* Update nav2_collision_monitor/src/costmap.cpp

Co-authored-by: Steve Macenski <stevenmacenski@gmail.com>
Signed-off-by: Mengting Yang <87471734+Lotusymt@users.noreply.github.com>

* Update nav2_collision_monitor/src/costmap.cpp

Co-authored-by: Steve Macenski <stevenmacenski@gmail.com>
Signed-off-by: Mengting Yang <87471734+Lotusymt@users.noreply.github.com>

* Update nav2_collision_monitor/src/costmap.cpp

Co-authored-by: Steve Macenski <stevenmacenski@gmail.com>
Signed-off-by: Mengting Yang <87471734+Lotusymt@users.noreply.github.com>

* Reverse format change

Signed-off-by: lotusymt <mengtiy5@uci.edu>

* Reverse format changes and comments

Signed-off-by: lotusymt <mengtiy5@uci.edu>

* Refactor in_range and count_stopped functions

Signed-off-by: Mengting Yang <87471734+Lotusymt@users.noreply.github.com>
Signed-off-by: lotusymt <mengtiy5@uci.edu>

* added costmap source to collision detector and tests( for failure path and collision detector)

Signed-off-by: lotusymt <mengtiy5@uci.edu>

* fix configuration and test bugs

Signed-off-by: lotusymt <mengtiy5@uci.edu>

---------

Signed-off-by: Mengting Yang <mengtiy5@uci.edu>
Signed-off-by: lotusymt <mengtiy5@uci.edu>
Signed-off-by: Mengting Yang <87471734+Lotusymt@users.noreply.github.

--- a/nav2_collision_monitor/test/CMakeLists.txt
+++ b/nav2_collision_monitor/test/CMakeLists.txt
@@ -12,6 +12,8 @@ target_link_libraries(sources_test
   rclcpp::rclcpp
   nav2_util::nav2_util_core
   ${sensor_msgs_TARGETS}
+  ${nav2_msgs_TARGETS}
+  nav2_costmap_2d::nav2_costmap_2d_core
   tf2_ros::tf2_ros
 )
 
@@ -52,9 +54,38 @@ ament_add_gtest(collision_detector_node_test collision_detector_node_test.cpp)
 target_link_libraries(collision_detector_node_test
   ${detector_library_name}
   ${geometry_msgs_TARGETS}
+  ${nav2_msgs_TARGETS}
+  nav2_costmap_2d::nav2_costmap_2d_core
   nav2_util::nav2_util_core
   rclcpp::rclcpp
   ${sensor_msgs_TARGETS}
   tf2_ros::tf2_ros
   ${visualization_msgs_TARGETS}
+)
+
+
+# Install bag + params so the launch file can find them via get_package_share_directory()
+install(DIRECTORY bags/cm_moving_obstacle
+  DESTINATION share/${PROJECT_NAME}/test/bags)
+install(FILES collision_monitor_node_bag.yaml
+  DESTINATION share/${PROJECT_NAME}/test)
+
+find_package(GTest REQUIRED)
+
+add_executable(collision_monitor_node_bag_gtest
+  collision_monitor_node_bag.cpp
+)
+target_link_libraries(collision_monitor_node_bag_gtest
+  GTest::gtest_main
+  ${monitor_library_name}
+  rclcpp::rclcpp
+  tf2_ros::tf2_ros
+  nav2_util::nav2_util_core
+  ${nav2_msgs_TARGETS}
+)
+
+add_launch_test(collision_monitor_node_bag.launch.py
+  TIMEOUT 120
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  ENV TEST_EXECUTABLE=$<TARGET_FILE:collision_monitor_node_bag_gtest>
 )
