--- a/nav2_map_server/test/map_saver_cli/CMakeLists.txt
+++ b/nav2_map_server/test/map_saver_cli/CMakeLists.txt
@@ -6,4 +6,5 @@ nav2_add_gtest(test_map_saver_cli
 target_link_libraries(test_map_saver_cli
   rclcpp::rclcpp
   ${nav_msgs_TARGETS}
+  nav2_ros_common::nav2_ros_common
 )
