Refactor parameter handler (#5667)
* Refactor parameter handler

Signed-off-by: mini-1235 <mauricepurnawan@gmail.com>

* Precommit

Signed-off-by: mini-1235 <mauricepurnawan@gmail.com>

* Clang tidy

Signed-off-by: mini-1235 <mauricepurnawan@gmail.com>

* Clang tidy

Signed-off-by: mini-1235 <mauricepurnawan@gmail.com>

* Fix readability

Signed-off-by: mini-1235 <mauricepurnawan@gmail.com>

---------

Signed-off-by: mini-1235 <mauricepurnawan@gmail.com>
Signed-off-by: Decwest <fumiyaonishi1016@gmail.com>

--- a/nav2_util/test/CMakeLists.txt
+++ b/nav2_util/test/CMakeLists.txt
@@ -40,3 +40,6 @@ target_link_libraries(test_twist_subscriber ${library_name} rclcpp::rclcpp ${geo
 
 nav2_add_gtest(test_path_utils test_path_utils.cpp)
 target_link_libraries(test_path_utils ${library_name} rclcpp::rclcpp ${geometry_msgs_TARGETS})
+
+ament_add_gtest(test_parameter_handler test_parameter_handler.cpp)
+target_link_libraries(test_parameter_handler ${library_name} rclcpp::rclcpp)
