:recycle: move dwpp functions to utils
Signed-off-by: Decwest <fumiyaonishi1016@gmail.com>

--- a/nav2_regulated_pure_pursuit_controller/test/CMakeLists.txt
+++ b/nav2_regulated_pure_pursuit_controller/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 # tests for regulated PP
 nav2_add_gtest(test_regulated_pp
   test_regulated_pp.cpp
+  test_dwpp_functions.cpp
   path_utils/path_utils.cpp
 )
 target_link_libraries(test_regulated_pp
