Update obstacle layer usage of max ranges (#5697)
* Use cell distance for obstacle marking max range

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* Don't raytrace clear the cell containing the current observation

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* Add tests for max marking and clearing ranges

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* Fix cpplint failures

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* Fix distance calculation

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* fix casting, formatting

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* check origin is in map, update CMakeLists

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* use hypot instead of squared dist

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* Move origin calc out of loop

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* Revert don't raytrace observation cell

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* Revert don't raytrace origin if it is observation cell

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

* Remove new line

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>

---------

Signed-off-by: Simon Dathan <simon.dathan@kudan.eu>
Signed-off-by: Decwest <fumiyaonishi1016@gmail.com>

--- a/nav2_costmap_2d/test/unit/CMakeLists.txt
+++ b/nav2_costmap_2d/test/unit/CMakeLists.txt
@@ -71,3 +71,9 @@ nav2_add_gtest(observation_buffer_test observation_buffer_test.cpp)
 target_link_libraries(observation_buffer_test
   nav2_costmap_2d_core
 )
+
+nav2_add_gtest(obstacle_layer_test obstacle_layer_test.cpp)
+target_link_libraries(obstacle_layer_test
+  nav2_costmap_2d_core
+  layers
+)
