:bug: add computeVelocityCommands test to improve code coverage
Signed-off-by: Decwest <fumiyaonishi1016@gmail.com>

--- a/nav2_regulated_pure_pursuit_controller/test/CMakeLists.txt
+++ b/nav2_regulated_pure_pursuit_controller/test/CMakeLists.txt
@@ -1,4 +1,6 @@
 # tests for regulated PP
+find_package(nav2_controller REQUIRED)
+
 nav2_add_gtest(test_regulated_pp
   test_regulated_pp.cpp
   test_dwpp_functions.cpp
@@ -10,6 +12,7 @@ target_link_libraries(test_regulated_pp
   nav2_core::nav2_core
   nav2_costmap_2d::nav2_costmap_2d_core
   nav2_util::nav2_util_core
+  nav2_controller::simple_goal_checker
   ${nav_msgs_TARGETS}
   rclcpp::rclcpp
   rclcpp_lifecycle::rclcpp_lifecycle
