:bug: add test dependency
Signed-off-by: Decwest <fumiyaonishi1016@gmail.com>

--- a/nav2_regulated_pure_pursuit_controller/package.xml
+++ b/nav2_regulated_pure_pursuit_controller/package.xml
@@ -30,6 +30,7 @@
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
+  <test_depend>nav2_controller</test_depend>
   <test_depend>tf2_geometry_msgs</test_depend>
   <test_depend>ament_cmake_ros</test_depend>
 
