--- a/nav2_regulated_pure_pursuit_controller/package.xml
+++ b/nav2_regulated_pure_pursuit_controller/package.xml
@@ -19,6 +19,7 @@
   <depend>geometry_msgs</depend>
   <depend>nav2_msgs</depend>
   <depend>pluginlib</depend>
+  <depend>ament_index_cpp</depend>
   <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
 
